2009-11-05  Dan Fandrich <dan@coneharvesters.com>

	* Added a bunch of new translations from launchpad.net
	* po/be.po: Added Belarusian translation by Iryna Nikanchuk 
	* po/en_GB.po: Added English (United Kingdom) translation by Bruce
	  Cowan 
	* po/it.po: Added Italian translation by Sergio Zanchetta 
	* po/ja.po: Added Japanese translation by Shushi Kurose 
	* po/pt.po: Added Portuguese translation by nglnx 
	* po/sq.po: Added Albanian translation by Vilson Gjeci 
	* po/zh_CN.po: Added Chinese (simplified) translation by Tao Wei 

2009-11-03  Dan Fandrich <dan@coneharvesters.com>

	* po/da.po: Updated Danish translation by Joe Hansen

2009-10-27  Dan Fandrich <dan@coneharvesters.com>

	* Improved tag table lookup performance by optimally ordering IFD
	  search and aborting searches early if the tag is not found.

2009-10-14  Dan Fandrich <dan@coneharvesters.com>

	* Changed the various functions searching for tags in ExifTagTable[]
	  to use a binary search. This single change increases the speed of
	  a run through the libexif-testsuite by 7%

2009-10-13  Dan Fandrich <dan@coneharvesters.com>

	* po/sv.po: Updated Swedish translation by Daniel Nylander
	* po/vi.po: Updated Vietnamese translation by Clytie Siddall
	* Fixed an inverted logic condition that prevented the bug
	  report address from appearing in the .pot file
	* Ensure that ExifTagTable[] is sorted by tag to allow for future
	  more efficient searching.

2009-10-09  Dan Fandrich <dan@coneharvesters.com>

	* Released 0.6.18

2009-10-09  Dan Fandrich <dan@coneharvesters.com>

	* po/sr.po: Added Serbian translation by Marko Uskokovic
	* po/pt_BR.po: Added Portuguese (Brazil) translation by André Gondi

2009-10-08  Dan Fandrich <dan@coneharvesters.com>

	* Demoted from EXIF_LOG_CODE_CORRUPT_DATA to EXIF_LOG_CODE_DEBUG the
	  MakerNote log messages that would result if a MakerNote were
	  rewritten by an application without rebasing the internal data